docs/css/intro.css
@import url("https://fonts.googleapis.com/css2?family=Big+Shoulders+Inline:opsz,wght@10..72,100..900&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Turret+Road:wght@200;300;400;500;700;800&display=swap");

:root {
  /* ------------------------------------------------- */
  /* ------------------ Custom Colors ---------------- */
  /* ------------------------------------------------- */

  --clr-dark: 0, 0%, 0%;
  --clr-light: 195, 70%, 90%;
  --clr-span: 195, 36%, 45%;
  --clr-white: 0, 0%, 100%;
  --clr-accent: 231, 77%, 90%;

  /* -------------------------------------------------------- */
  /* ------------------ Custom Font-Sizes ------------------- */
  /* -------------------------------------------------------- */

  /* Step -1: 13.3333px → 15px */
  --step--1: clamp(0.8333rem, 0.7971rem + 0.1812cqi, 0.9375rem);
  /* Step 0: 16px → 18px */
  --step-0: clamp(1rem, 0.9565rem + 0.2174cqi, 1.125rem);
  /* Step 1: 19.2px → 21.6px */
  --step-1: clamp(1.2rem, 1.1478rem + 0.2609cqi, 1.35rem);
  /* Step 2: 23.04px → 25.92px */
  --step-2: clamp(1.44rem, 1.3774rem + 0.313cqi, 1.62rem);
  /* Step 3: 27.648px → 31.104px */
  --step-3: clamp(1.728rem, 1.6529rem + 0.3757cqi, 1.944rem);
  /* Step 4: 33.1776px → 37.3248px */
  --step-4: clamp(2.0736rem, 1.9834rem + 0.4508cqi, 2.3328rem);
  /* Step 5: 39.8131px → 44.7898px */
  --step-5: clamp(2.4883rem, 2.3801rem + 0.5409cqi, 2.7994rem);
  /* Step 6: 47.7757px → 53.7477px */
  --step-6: clamp(2.986rem, 2.8562rem + 0.6491cqi, 3.3592rem);
  /* Step 7: 57.3309px → 64.4973px */
  --step-7: clamp(3.5832rem, 3.4274rem + 0.779cqi, 4.0311rem);

  /* ------------------------------------------------------- */
  /* ----------------- Custom Space-Sizes ------------------ */
  /* ------------------------------------------------------- */
  /* Space 1: 4px → 4.5px */
  --space-xxs: clamp(0.25rem, 0.2174rem + 0.1009cqi, 0.2813rem);
  /* Space xs: 8px → 9px */
  --space-xs: clamp(0.5rem, 0.4348rem + 0.1009cqi, 0.5625rem);
  /* Space s: 16px → 18px */
  --space-s: clamp(1rem, 0.9565rem + 0.2174cqi, 1.125rem);
  /* Space m: 24px → 27px */
  --space-m: clamp(1.5rem, 1.4348rem + 0.3261cqi, 1.6875rem);
  /* Space l: 32px → 36px */
  --space-l: clamp(2rem, 1.913rem + 0.4348cqi, 2.25rem);
  /* Space xl: 48px → 54px */
  --space-xl: clamp(3rem, 2.8696rem + 0.6522cqi, 3.375rem);
  /* Space 2xl: 64px → 72px */
  --space-2xl: clamp(4rem, 3.8261rem + 0.8696cqi, 4.5rem);
  /* Space 3xl: 96px → 108px */
  --space-3xl: clamp(6rem, 5.7391rem + 1.3043cqi, 6.75rem);
  /* Space 4xl: 112px → 126px */
  --space-4xl: clamp(7rem, 6.6957rem + 1.5217cqi, 7.875rem);
  /* Space 5xl: 128px → 144px */
  --space-5xl: clamp(8rem, 7.6522rem + 1.7391cqi, 9rem);
  /* Space 6xl: 144px → 162px */
  --space-6xl: clamp(9rem, 8.6087rem + 1.9565cqi, 10.125rem);
  /* Space 7xl: 160px → 180px */
  --space-7xl: clamp(10rem, 9.5652rem + 2.1739cqi, 11.25rem);

  --font-turret-road: "Turret Road", sans-serif;
  --font-turret-road-light: 300;
  --font-turret-road-regular: 400;
  --font-turret-road-bold: 700;

  --font-big-shoulders-inline: "Big Shoulders Inline", sans-serif;
  --font-big-shoulders-inline-light: 100;
}

/* --------------------------------------- */
/* ------------  Custom Colors ----------- */
/* --------------------------------------- */

.text-dark {
  color: hsl(var(--clr-dark));
}

.text-light {
  color: hsl(var(--clr-light));
}

.text-span {
  color: hsl(var(--clr-span));
}

.text-white {
  color: hsl(var(--clr-white));
}

.text-accent {
  color: hsl(var(--clr-accent));
}
/* --------------------------------------- */
html {
  color-scheme: dark only;
}

.intro {
  overflow: clip;
}

.intro > * {
  container-type: inline-size;
  z-index: 1; /* Ensure it is above the background */
}

.intro::before {
  content: "";
  width: 100vw; /* Full viewport width */
  height: 100vh; /* Full viewport height */
  position: fixed;
  top: 0;
  left: 0;
  background: linear-gradient(
        90deg,
        color-mix(in hsl, canvasText, transparent 70%) 1px,
        transparent 1px 30px
      )
      50% 50% / 30px 30px,
    linear-gradient(
        color-mix(in hsl, canvasText, transparent 70%) 1px,
        transparent 1px 30px
      )
      50% 50% / 30px 30px;
  mask: linear-gradient(-20deg, transparent 50%, white) 100%;
  transform-style: preserve-3d;
  transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out,
    background-position 0.3s ease-in-out;
  z-index: -1; /* Ensure it is behind other content */
  color: hsl(var(--clr-white));
  overflow: hidden;
}

header {
  width: 100%;
  padding: 0;
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin-block: var(--space-xxs);
}

header .logo {
  display: flex;
  align-items: center;
  font-size: var(--step-0);
  font-family: "Turret Road", sans-serif;
  font-weight: var(--font-turret-road-light);
  color: hsl(var(--clr-white));
  text-shadow: 0px 5px 10px rgb(177, 235, 230);
  margin-left: var(--space-l);
}

header h2 {
  color: hsl(var(--clr-white));
  font-size: var(--step-0);
  margin: var(--space-xxs) var(--space-l) 0 0;
}

header h2 span {
  font-family: "Turret Road", sans-serif;
  font-weight: var(--font-turret-road-light);
  font-size: var(--step-0);
  color: hsl(var(--clr-span));
  margin-left: var(--space-xxs);
  margin-right: var(--space-s);
  text-shadow: 0px 5px 10px rgb(177, 235, 230);
}
header .bars {
  position: relative;
  height: 3px;
  width: 20px;
  border-radius: 2px;
  background-color: #888888;
  cursor: pointer;
  display: none;
}

header .bars.is-active {
  transform: rotate(90deg);
  width: 35px;
  transform-origin: right;
  transform: translateY(15px) rotate(45deg);
}
header .bars::after,
header .bars::before {
  position: absolute;
  content: "";
  height: 3px;
  left: 0;
  width: 20px;
  border-radius: 2px;
  background: #888888;
  cursor: pointer;
}
header .bars::after {
  bottom: 7px;
}
header .bars::before {
  top: 7px;
}

.nav-links {
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
  top: 0;
  left: 0;
  padding: 0;
  width: 100%;
  height: 4rem;
  z-index: 2;
  transition: all ease-in-out 0.5s;
}
.nav-links li {
  position: relative;
  padding: var(--space-xxs) var(--space-xs);
  margin: var(--space-xxs) var(--space-xs);
  list-style: none;
}
.nav-links li a {
  text-decoration: none;
  display: flex;
  flex-direction: column;
  align-items: center;
  color: #888888;
}
.nav-links li a span {
  font-family: "Turret Road", sans-serif;
  font-size: var(--step--1);
  font-weight: var(--font-turret-road-light);
  letter-spacing: 1px;
  margin-top: var(--space-xxs);
}

.nav-links li img {
  max-width: 100%;
  display: block;
  height: auto;
  object-fit: cover; /* cover, contain, fill, none, scale-down */
  background-position: center;
  background-size: cover;
  margin-right: var(--space-2xl);
}

.intro-content {
  font-family: "Turret Road", sans-serif;
  font-weight: var(--font-turret-road-light);
  text-align: center;
  overflow: hidden;
  margin: auto;
  padding: var(--space-3xl);
  min-height: 100svh;
}

.intro-content p {
  font-size: var(--step--1);
  margin-block: 0.15em;
  text-align: center;
}

.intro-content p span {
  font-size: var(--step--1);
  color: hsl(var(--clr-span));
  padding-left: var(--space-xs);
}

.intro-content h1,
h2,
h3,
h4 {
  font-size: var(--step-0);
  font-weight: 300;
  margin-block: 0.2em;
  text-align: center;
}

.intro-content a {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-decoration: none;
  font-size: var(--step--1);
  color: hsl(var(--clr-white));
  visibility: visible; /* Ensure the parent is visible */
}

.intro-content a span {
  font-size: var(--step-4);
  color: hsl(var(--clr-span));
  margin-block: var(--space-xs);
}

.intro-content a i {
  font-size: var(--step-3);
  z-index: 5;
  color: hsl(var(--clr-span));
  text-align: center;
  vertical-align: middle;
}

.wrapper-gradient-text {
  font-family: "Turret Road", sans-serif;
  font-weight: var(--font-turret-road-light);
  font-size: var(--step-1);
  line-height: 0.6em;
  text-align: center;
  text-shadow: 0px 0px 0px rgb(255, 255, 255);
  margin-bottom: 0em;
}

.text-layer {
  transform-style: preserve-3d;
  transition: transform 0.3s ease-in-out;
  background: linear-gradient(
    -100deg,
    rgba(142, 186, 211),
    rgba(142, 186, 211, 1),
    rgba(142, 186, 211, 0.6),
    rgba(142, 186, 211, 0.1)
  );
  background-size: 200% 200%;
  background-position: 0% 0%;
  -webkit-background-clip: text;
  background-clip: text;
  color: transparent;
  animation: shadowDrip 3s infinite alternate ease-in-out;
  margin-bottom: 0em;
  padding: 0;
  text-shadow: 0px 15px 0px rgba(255, 255, 255, 0.853);
  transition: filter 0.4s ease-in-out;
  will-change: filter;
  z-index: 1;
  text-align: center;
}

@keyframes shadowDrip {
  0% {
    text-shadow: 0px 0px 0px rgba(255, 255, 255, 0.853);
  }
  100% {
    text-shadow: 0px 10px 20px rgba(207, 217, 224, 0.6),
      0px 30px 40px rgba(178, 193, 199, 0.74),
      0px 70px 5px rgba(232, 235, 238, 0.664);
  }
}

@container (max-width: 600px) {
  /* Mobile styles */
  header {
    margin-block: var(--space-s);
  }

  header .bars {
    display: block;
    transition: 0.5s;
    margin: var(--space-xs) var(--space-s) 0 0;
    cursor: pointer;
  }

  nav {
    position: fixed;
    z-index: 3;
  }
  .nav-links {
    position: fixed;
    top: 0;
    left: 0;
    padding-top: 1rem;
    flex-direction: column;
    height: 100vh;
    width: 100%;
    pointer-events: none;
    transition: 0.5s;
    opacity: 0;
  }

  .nav-links li {
    margin: var(--space-s) 0;
  }
  .nav-links.open {
    opacity: 1;
    pointer-events: all;
  }
  .nav-links li img {
    max-width: 100%;
    display: block;
    height: auto;
    object-fit: cover; /* cover, contain, fill, none, scale-down */
    background-position: center;
    background-size: cover;
    margin: auto;
  }
}

